  to the function browseURL. The 'browser' argument is by default set
  based on the output of interactive(). This prevents R CMD CHECK
  trying to open browser windows. See the help file of plot.gvis for
  more details.
  Thanks to Henrik Bengtsson for his comments and suggestions.

* Changed example in help file of gvisMap to show how to include html
  code in tooltip. 

Bug Fixes

* Chart editor was not validated properly under XHMTL 1.0 Strict

googleVis 0.2.17 [2012-08-02]
----------------------------

Changes

 * Added section on 'knitr' and 'Rook' to vignette

 * Added example to gvisMerge demonstrating the use of 'Reduce'

Bug Fixes

 * Data frames with one row only were not displayed in a chart.
   Thanks to Oliver Jay and Wai Tung Ho for reporting this issue.

 * Fixed earth quake example, using data from 
   http://www.iris.edu/seismon/last30.html, 
   Mag was read as factor rather than numeric

googleVis 0.2.16 [2012-06-01]
----------------------------

Changes

 * Updated example in help file of gvisGeoChart for individual colour
   axis 

 * Updated links to Google API pages

NEW FEATURES

 * gvisMotionCharts accepts quarterly and weekly time dimensions.
   Thanks to Jason Pickering for providing a patch. 

googleVis 0.2.15 [2012-03-04]
----------------------------

Changes

*  Updated documentation following a new version of the Google API
   on 22 February 2012. 
     
*  Moved vignette from folder /inst/doc to /vignettes

NEW FEATURES

*  Quoted from Google
   http://code.google.com/apis/chart/interactive/docs/release_notes.html: 
   - Added gradient color mode to bubble chart.
   - Geo chart:
     o  Region interactivity in marker mode is now disabled by
     	default. How to keep the old behavior? Set the
   	enableRegionInteractivity option to true.

     o  Markers are now opaque by default. How to keep the old
        behaviour? Set the markerOpacity option to 0.5.

     o  Marker size is now between 3 and 12 pixels by default. How to